[build-system]
requires = ["setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
[project]
name = "sender" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.1" # REQUIRED, although can be dynamic
description = "A cli that extracts information from any page to generate markdown note about the page"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["scouts", "setuptools", "development"]
authors = [{ name = "Victor Cabello", email = "vmeca87@gmail.com" }]
maintainers = [
    { name = "Victor Cabello", email = "vmeca87@gmail.com" }
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # Indicate who your project is intended for
  "Intended Audience :: Scouts Mexico",
  "Topic :: Document Generator",
  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",
  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
[project.optional-dependencies]
dev = [
    "check-manifest",
    "neovim",
    "python-lsp-server[all]",
    "pyright",
    "ipython",
    "nox"
]
test = ["coverage", "nox"]
[project.urls]
[project.scripts]
sender = "sender:main"
[tool.setuptools]
package-data = { "sample" = ["*.dat"] }
